Overview of changes in xtickertape-2.0

* Changed the application class from `Tickertape' to `XTickertape'.

* No longer redirecting the output of `metamail' to /dev/null, and
  using the `-x' option so that it doesn't try to talk to the tty.
  [Thanks David Leonard]

* Fixed a bug in the way the icon was created.  Now the big `e' will
  be read even on 8-bit displays.

* The scroller can now operate without an offscreen pixmap.  This
  enables hardware optimizations with some graphics cards, but results 
  in more traffic between the client and server.  The offscreen pixmap 
  option can still be enabled by setting the X resource
  XTickertape.scroller.usePixmap to True.

* Message replacement now works!

* Updated to use the elvin-4 client library instead of the elvin-3
  client library

Overview of changes in xtickertape-1.6.6

* Minimum size of the control panel now takes into account the height
  of the horizontal scrollbar on the history list.

* Minor configure fix for machines which don't have a separate include
  file for crypt() (thanks David Leonard for pointing out that BSD
  machines don't have <crypt.h>).

* Check environment variables ELVIN_HOST and ELVIN_PORT if no
  command-line option given before using defaults (thanks David
  Leonard).

* Keyboard activity now hides tool-tips.

* Chased down some more memory leaks (bloody Motif!).

* The SIGHUP handler failed to re-register itself.  This is now fixed.

Overview of changes in xtickertape-1.6.5

* Items in the history window which have an attachment (by default
  these are displayed in a bold font) now display a tool-tip
  indicating what that attachment is.

* The user field now defaults to a combination of the user name and
  local domain.  These can be overridden with environment variables
  (USER/LOGNAME, DOMAIN) or on the command-line (--user/-u,
  --domain/-D).

* Completed the great tickertape naming reform.

* Plugged all known memory leaks.

Overview of changes in xtickertape-1.6.4
